--- a/packages/ui/src/elements/DatePicker/index.scss
+++ b/packages/ui/src/elements/DatePicker/index.scss
@@ -274,7 +274,7 @@ $cal-icon-width: 18px;
     }
 
     .react-datepicker-popper {
-      z-index: 10;
+      z-index: calc(var(--z-modal) + 1);
       border: none;
     }
 
